--- a/front-end/src/scss/global.scss
+++ b/front-end/src/scss/global.scss
@@ -14,6 +14,16 @@
     local('PlusJakartaSans-Medium'),
     url('../assets/fonts/PlusJakartaSans-Medium.woff2') format('woff2'),
     url('../assets/fonts/PlusJakartaSans-Medium.woff') format('woff');
+  font-weight: 500;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'PlusJakartaSans';
+  src:
+    local('PlusJakartaSans-SemiBold'),
+    url('../assets/fonts/PlusJakartaSans-SemiBold.woff2') format('woff2'),
+    url('../assets/fonts/PlusJakartaSans-SemiBold.woff') format('woff');
   font-weight: 600;
   font-display: swap;
 }
